made changed to the SignIn to make it more neat

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,9 +2,9 @@
     <h1>Tech-Blog</h1>
     <div class="navbar">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Dashboard</a></li>
-            <li><a href="">Login</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/signin">Login</a></li>
         </ul>
     </div>
 </header>
