--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,17 @@
 <header>
     <h1>Tech-Blog</h1>
-    <div class="navbar">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/signin">Login</a></li>
-        </ul>
-    </div>
+    <nav>
+  <ul>
+    <li><a href="/">Homepage</a></li>
+    <li><a href="/dashboard">Dashboard</a></li>
+    {{#if isAuthenticated}}
+      <li><a href="/logout">Logout</a></li>
+    {{else}}
+      <li><a href="/signin">Login</a></li>
+      <li><a href="/signup">Sign Up</a></li>
+    {{/if}}
+  </ul>
+</nav>
 </header>
 <main class="container">
 {{#each posts}}
